# anotherone_plugin_ble

./: .gdbinit  .gitmodules  .metadata  README.md  pubspec.yaml
aurora/: CMakeLists.txt  anotherone_ble_plugin.cpp
aurora/SimpleBLEmain/simple_ble_lib/lib/: libsimpleble-c.so.0  libsimpleble-c.so.0.8.0  libsimpleble.so.0  libsimpleble.so.0.8.0
aurora/SimpleBLEmain/simple_ble_lib/lib/cmake/simpleble/: simpleble-config-noconfig.cmake  simpleble-config.cmake
aurora/SimpleBLEmain/simple_bluez_lib/lib/: libsimplebluez.so.0  libsimplebluez.so.0.8.0
aurora/SimpleBLEmain/simple_bluez_lib/lib/cmake/simplebluez/: simplebluez-config-noconfig.cmake  simplebluez-config.cmake
aurora/include/anotherone_ble/: anotherone_ble_plugin.h  globals.h
aurora/libs/simple_ble_lib/lib/pkgconfig/: simpleble.pc
aurora/libs/simple_bluez_lib/lib/pkgconfig/: simplebluez.pc
aurora/libs/simple_dbus_lib/lib/: libsimpledbus.so.0  libsimpledbus.so.0.8.0
aurora/libs/simple_dbus_lib/lib/cmake/simpledbus/: simpledbus-config-noconfig.cmake  simpledbus-config.cmake
aurora/libs/simple_dbus_lib/lib/pkgconfig/: simpledbus.pc
example/: README.md  pubspec.yaml
example/aurora/: CMakeLists.txt
example/aurora/desktop/: ru.auroraos.anotherone_ble_example.desktop
example/aurora/rpm/: ru.auroraos.anotherone_ble_example.spec
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: anotherone_ble.dart  anotherone_ble_method_channel.dart  anotherone_ble_platform_interface.dart
lib/modules/: device.dart
